<resources>
    <string name="app_name">ExamAndroid</string>
    <string name="btn_intent_exam">Intent Exam</string>
    <string name="btn_sqlite_exam">SQLite Exam</string>
    <string name="txt_input_name_here">Input Name Here</string>
    <string name="txt_input_email_here">Input Email Here</string>
    <string name="txt_input_phone_here">Input Phone Here</string>
    <string name="btn_click_here">Click Here</string>
    <string name="txtname">Name</string>
    <string name="txtnumber">Number</string>
    <string name="txt_tanggal_lahir">Tanggal Lahir</string>
    <string name="txt_jenis_kelamin">Jenis Kelamin</string>
    <string name="txt_alamat">Alamat</string>
</resources>
